nowrap to avoid line break on skills cloud

--- a/css/less/page/about.less
+++ b/css/less/page/about.less
@@ -2,7 +2,7 @@
 .about{
 	.skills{ display: block; margin: @vSpace @margin*2 @vSpace; text-align: center;
 		@multiplier: 1;
-		.skill-item{ color: @blue; display: inline-block; .sansLight; font-size: @regularFont*@multiplier; line-height: 1.1; margin: 0 @margin/3;
+		.skill-item{ color: @blue; display: inline-block; .sansLight; font-size: @regularFont*@multiplier; line-height: 1.1; margin: 0 @margin/3; white-space: nowrap;
 			&.largest{ font-size: @largestFont*@multiplier;}
 			&.larger{ font-size: @largerFont*@multiplier;}
 			&.large{ font-size: @largeFont*@multiplier;}
