--- a/css/style.css
+++ b/css/style.css
@@ -575,6 +575,7 @@ img {
   font-size: 1em;
   line-height: 1.1;
   margin: 0 13.33333333px;
+  white-space: nowrap;
 }
 .about .skills .skill-item.largest {
   font-size: 2.7em;
